fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 
 @media screen and (min-width: 1100px){
 	#container {
-		margin-left: 100px;
-		width: 100%;
+		margin-left: 180px;
+		width: 84%;
 
 	}
 
